# simd_bytes

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  simd128.rs
tests/: Cargo.toml
tests/src/: lib.rs
