[package]
name = "simd_bytes"
version = "0.1.0"
edition = "2021"
authors = ["CGQAQ <m.jason.liu@outlook.com>"]
license = "MIT LICENSE"
keywords = ["simd", "bytes", "fast", "utility"]
description = "simd utility functions to handle bytes data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
