[package]
name = "simd_bytes"
version = "0.1.1"
edition = "2021"
authors = ["CGQAQ <m.jason.liu@outlook.com>"]
license = "MIT"
keywords = ["simd", "bytes", "fast", "utility"]
description = "simd utility functions for handle bytes data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
